[gd_scene load_steps=2 format=3 uid="uid://d3nicie70bayo"]

[ext_resource type="Script" uid="uid://cipmxdcg2apoq" path="res://scripts/ForgeMinigame.gd" id="1"]

[node name="ForgeTemp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -622.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="ProgressBar" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.9
offset_top = -15.0
offset_right = 150.1
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="ProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -15.0
offset_right = 302.0
offset_bottom = 15.0
grow_vertical = 2
color = Color(0.133333, 0.772549, 0.364706, 0.4)

[node name="TargetZone" type="ColorRect" parent="ProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 250.0
offset_top = -15.0
offset_right = 280.0
offset_bottom = 15.0
grow_vertical = 2
color = Color(0.133333, 0.772549, 0.364706, 0.4)

[node name="Cursor" type="ColorRect" parent="ProgressBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 4.0
offset_bottom = 20.0
grow_vertical = 2
color = Color(1, 0.85, 0.2, 1)

[node name="TemperatureLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 60.0
offset_right = 40.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "500Â°C"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Progreso: 0/3"
horizontal_alignment = 1
